# privex

./: .gitignore  .npmrc  README.md  TECHNICAL.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts
public/assets/: vault_account.masp  vault_checkin.masp  vault_init.masp
public/src/ui/: index.html
src/: account.ts  checkin.ts  landing.ts  main.ts  vault-records.ts  vault.ts  wallet.ts
src/assets/: vault_account.masp  vault_checkin.masp  vault_init.masp
src/ui/: app.html  index.html  privex-reference.html  styles.css
vault-contract/: Cargo.toml  rust-toolchain.toml
vault-contract/.claude/hooks/: build-contracts.sh
vault-contract/.claude/skills/local-node-validation/: SKILL.md
vault-contract/.claude/skills/miden-concepts/: SKILL.md
vault-contract/.claude/skills/rust-sdk-patterns/: SKILL.md
vault-contract/.claude/skills/rust-sdk-pitfalls/: SKILL.md
vault-contract/.claude/skills/rust-sdk-source-guide/: SKILL.md
vault-contract/.claude/skills/rust-sdk-testing-patterns/: SKILL.md
vault-contract/contracts/vault-account/: Cargo.toml  miden-project.toml
vault-contract/contracts/vault-account/src/: lib.rs
vault-contract/contracts/vault-checkin-tx/: Cargo.toml  miden-project.toml
vault-contract/contracts/vault-checkin-tx/src/: lib.rs
vault-contract/contracts/vault-init-tx/: Cargo.toml  README.md  miden-project.toml  rust-toolchain.toml
vault-contract/contracts/vault-init-tx/src/: lib.rs
