[package]
name = "vault-checkin-tx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.12" }

[package.metadata.component]
package = "miden:vault-checkin-tx"

[package.metadata.miden]
project-kind = "transaction-script"

[package.metadata.miden.dependencies]
"miden:vault-account" = { path = "../vault-account" }

[package.metadata.component.target.dependencies]
"miden:vault-account" = { path = "../vault-account/target/generated-wit/" }
