[package]
name = "vault-init-tx"
version = "0.1.0"
edition = "2021"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
# Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
# and transaction kernel API for the Miden rollup

miden = { version = "0.12" }


[package.metadata.component]
package = "miden:vault-init-tx"

[package.metadata.miden]
project-kind = "transaction-script"

# Miden dependencies for cargo-miden build/linking
[package.metadata.miden.dependencies]
"miden:vault-account" = { path = "../vault-account" }

[package.metadata.component.target.dependencies]
"miden:vault-account" = { path = "../vault-account/target/generated-wit/" }
